--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 @import "tailwindcss/utilities";
 
 .wrapper {
-    @apply max-w-screen-xl px-4 mx-auto;
+    @apply relative max-w-screen-xl px-4 mx-auto;
 }
 
 .nav-link-item {
